--- a/artwork.html
+++ b/artwork.html
@@ -44,13 +44,13 @@
 	  <button class="btn fil-cat" href="" data-rel="all">All</button>
 	  <button class="btn fil-cat" data-rel="poster">Posters</button>
 	  <button class="btn fil-cat" data-rel="flyers">Flyers</button>
-	  <button class="btn fil-cat" data-rel="paintings">Paintings</button>
+	  <button class="btn fil-cat" data-rel="paintings">Drawings</button>
 	  <button class="btn fil-cat" data-rel="calligraphy">Calligraphy</button>
 	</div> 
 	<div id="portfolio">
 		<div class="tile scale-anm paintings all">
 	    	<img src="art/sunset.jpg" alt=""/>
-		</div>
+		</div>	
 
 		<div class="tile scale-anm calligraphy all">
 			<img src="art/calli-1.png" alt="" />
@@ -59,6 +59,10 @@
 		<div class="tile scale-anm flyers all">
 			<img src="art/famifilm.png" alt="" /> 
 		</div>
+
+		<div class="tile scale-anm paintings all">
+	    	<img src="art/sunrise.jpg" alt=""/>
+		</div>			
 
 		<div class="tile scale-anm poster all">
 			<img src="art/ncpc.jpg" alt="" /> 
@@ -71,9 +75,14 @@
 		<div class="tile scale-anm calligraphy all">
 			<img src="art/calli-4.png" alt="" />
 		</div>
+		
 		<div class="tile scale-anm poster all">
 			<img src="art/tair.jpg" alt="" /> 
 		</div>
+	
+		<div class="tile scale-anm paintings all">
+	    	<img src="art/sunflower.gif" alt=""/>
+		</div>	
 
 		<div class="tile scale-anm calligraphy all">
 			<img src="art/calli-3.png" alt="" />
