--- a/projects.html
+++ b/projects.html
@@ -101,7 +101,8 @@
 						<h4><span class="fa icon fa-briefcase" style="font-size:26px"></span> 
 						Position</h4>
 						<li>Team Leader of 6 people</li>
-						<li>User Interface Developer / Database Developer</li>
+						<li>User Interface Developer</li>
+						<li>Database Developer</li>
 					</div>
 					<div class="pcol">
 						<h4><span class="fa icon fa-wrench" style="font-size:26px"></span> Tools</h4>
@@ -109,16 +110,14 @@
 					</div>
 				</div>
 				<div class="prow">
-					<div class="pcol">
-						<h4><h4><span class="fa icon fa-pencil" style="font-size:26px"></span>Description</h4>
-						This project is start-up company TripGIF collaborated with <b>MIS301 : System Analysis and Design Course</b> of NSYSU MIS department for a semester.
-						<br><br>
-						<li><b>Home page</b>, users can simply click the join button and log in, the id is corresponding to each mobile device.
-						</li>
-						<li>In <b>Login page</b>, users can customized avatar and username. User can add a new group map or join an exist one by entering the special number.
-						</li>
-						<li><b>On Travel map</b>, all members' position are shown on the map according to each GPS location. There is a chat space for all members to send text or images.</li>
-					</div>
+					<h4><h4><span class="fa icon fa-pencil" style="font-size:26px"></span>Description</h4>
+					This project is start-up company TripGIF collaborated with <b>MIS301 : System Analysis and Design Course</b> of NSYSU MIS department for a semester.
+					<br><br>
+					<li><b>Home page</b>, users can simply click the join button and log in, the id is corresponding to each mobile device.
+					</li>
+					<li>In <b>Login page</b>, users can customized avatar and username. User can add a new group map or join an exist one by entering the special number.
+					</li>
+					<li><b>On Travel map</b>, all members' position are shown on the map according to each GPS location. There is a chat space for all members to send text or images.</li>
 				</div>
 			</div>		
 			<div class="detail" id="app-famifilm">
@@ -147,7 +146,7 @@
 					</div>
 				</div>
 				<div class="prow">
-					<div class="pcol">
+					<!-- <div class="pcol"> -->
 						<h4><span class="fa icon fa-pencil" style="font-size:26px"></span>Description</h4>
 							FamiFilm is the graduation capstone project for Information Management Department, National Sun Yat-sen University.
 							<br>
@@ -156,7 +155,7 @@
 							<li><b>Group Calendar</b> provides a shared place for families to add events, users can click on the bell icon to turn on notification.</li>
 							<li><b>Image Phonebook</b> show each members' photos, clicking on the photos can call that person or edit the contact information.</li>
 							<li><b>Playing Video</b> shows videos from other family members in that day. By sliding left or right, and clicking on the play button can easily control it.</li>
-					</div>
+					<!-- </div> -->
 				</div>
 			</div>
 			<div class="detail" id="trip-ks">
@@ -185,11 +184,11 @@
 						</div>
 					</div>
 					<div class="prow">
-						<div class="pcol">
+						<!-- <div class="pcol"> -->
 							<h4><span class="fa icon fa-pencil" style="font-size:26px"></span>Description</h4>
 							This website is customized for Eco-Mobility World Festival. Users can uploaded images to the web service ,and the imbedded google map can show the image on the street scene based on each location. <br><br>I am responsible for communicate with back-end developers and the visual designer, turning visual design into front-end code.
 							</div>
-						</div>
+						<!-- </div> -->
 			</div>
 			<div class="detail" id="web-krtco">
 				<div class="banner">
@@ -215,13 +214,13 @@
 						</div>
 					</div>
 					<div class="prow">
-						<div class="pcol">
+						<!-- <div class="pcol"> -->
 							<h4><span class="fa icon fa-pencil" style="font-size:26px"></span>Description</h4>
 							This is a website for a corporate image filming competition. <br>
 							I was in a web development team with 2 database developers. <br>
 							I acted as the <b>front-end developer</b>, analyzed the needs of the contest project manager and then communicated with the visual designer. Finally, I translated the design into code.
 						    <br><br>Visit the website : <a href="http://bm.nsysu.edu.tw/krtc-competition2016/home.php">link</a>
-						</div>
+						<!-- </div> -->
 					</div>
 			</div>			
 			<div class="detail" id="game">
@@ -246,16 +245,16 @@
 					</div>
 				</div>
 				<div class="prow">
-				<div class="pcol">
+				<!-- <div class="pcol"> -->
 					<h4><span class="fa icon fa-pencil" style="font-size:26px"></span>Description</h4>
 					This 2D game was made in a <b>hackathon competition</b> of Department of Information Management. <br>
 					Located near a mountain, National Sun-Yat sen University is famous for monkeys. Student may be attacked by monkeys everyday, they often robbed people's food carrying in hand. 
 					<br><br>
 					Play it ! : 
 					<a href="https://chengwei1010.github.io/nsysuHero/">
-						game link (please use Google Chrome or FireFox)
+						game link (please use Safari or FireFox)
 					</a>
-				</div>
+				<!-- </div> -->
 				</div>
 			</div>
 			<div class="detail" id="video_famifilm">
