--- a/artwork.html
+++ b/artwork.html
@@ -16,12 +16,11 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=Vollkorn SC' rel='stylesheet'>
-	<title>WEI CHENG | Arts</title>
+	<title>WEI CHENG's Portfolio</title>
 </head>
 <body>
 	<div class="drawer">
-		<span class="drawer_btn_nav"><a href="index.html">ABOUT</a></span>
-		<span class="drawer_btn_nav"><a href="projects.html">PROJECTS</a></span>
+		<span class="drawer_btn_nav"><a href="index.html">PROJECTS</a></span>
 		<span class="drawer_btn_nav"><a href="artwork.html" class="light">ARTWORK</a></span>
 		<span class="drawer_btn_nav"><a href="WEICHENG.pdf">RESUME</a></span>
 	</div>
@@ -30,16 +29,13 @@
 	</div>
 <div class="wrapper">
 	<header>
-		<img class="logo" src="img/logo.png" alt="">
+		<!-- <img class="logo" src="img/logo.png" alt=""> -->
+		<a href="index.html" class="a_nav"><span class="btn_nav">PROJECTS</span></a>
+		<a href="artwork.html" class="a_nav light"><span class="btn_nav">ARTWORK</span></a>
+		<a href="WEICHENG.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
 	</header>
-	<nav>
-		<span class="btn_nav"><a href="index.html" class="a_nav">ABOUT</a></span>
-		<span class="btn_nav"><a href="projects.html" class="a_nav">PROJECT</a></span>
-		<span class="btn_nav"><a href="artwork.html" class="a_nav light">ARTWORK</a></span>
-		<span class="btn_nav"><a href="WEICHENG.pdf" class="a_nav">RESUME</a></span>
-	</nav>
 
-	<article>
+	<article class="introduce">
 	<div class="toolbar mb2 mt2">
 	  <button class="btn fil-cat" href="" data-rel="all">All</button>
 	  <button class="btn fil-cat" data-rel="poster">Posters</button>
